--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -29,5 +29,5 @@ jobs:
           ssh -i ~/.ssh/github_rsa -o StrictHostKeyChecking=no ${REMOTE_USER}@${REMOTE_HOST} "
             cd ${REMOTE_DIR} &&
             docker stop ons || true && docker rm ons || true &&
-            docker run -d --name ons -p ${APP_PORT}:${APP_PORT} ons
+            docker run --network host -d --name ons -p ${APP_PORT}:${APP_PORT} ons
           "
