--- a/build.gradle
+++ b/build.gradle
@@ -44,15 +44,22 @@ dependencies {
 
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
-    // feign client
+    //feign client
     implementation platform("org.springframework.cloud:spring-cloud-dependencies:2021.0.5")
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 
-    //  jwt
+    //jwt
     implementation 'io.jsonwebtoken:jjwt:0.12.3'
 
-    //  swagger
+    //swagger
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
+
+    //mail
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
+
+    //thymeleaf
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
 }
 
 tasks.named('test') {
