feat : "이메일 인증 기능 구현"

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -30,5 +30,6 @@ jobs:
             cd ${REMOTE_DIR} &&
             docker stop ons || true && docker rm ons || true &&
             docker run --network host -d --name ons -p ${APP_PORT}:${APP_PORT} ons
-            docker system prune -a
+            sleep 10
+            docker image prune -a -f
           "
