--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,11 @@ dependencies {
 
     //firebase storage
     implementation 'com.google.firebase:firebase-admin:9.2.0'
+
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+
+    implementation 'javax.xml.bind:jaxb-api:2.3.1'
+    implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.1'
 }
 
 tasks.named('test') {
