--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -29,7 +29,7 @@ jobs:
           ssh -i ~/.ssh/github_rsa -o StrictHostKeyChecking=no ${REMOTE_USER}@${REMOTE_HOST} "
             cd ${REMOTE_DIR} &&
             docker stop ons || true && docker rm ons || true &&
-            docker run --network host -d --name ons -p ${APP_PORT}:${APP_PORT} ons
+            docker run --network ons -d --name ons -p ${APP_PORT}:${APP_PORT} ons
             sleep 10
             docker image prune -a -f
           "
